# UniversityTimeTable

./: .gitignore
go_modules/: go.mod
go_modules/admin/: go.mod  go.sum
go_modules/admin/cmd/: main.go
go_modules/admin/cmd/admin/controller/: system_test_controller.go
go_modules/admin/config/: application.yml
go_modules/auth/: docker-compose.yml  go.mod  go.sum
go_modules/auth/cmd/: main.go
go_modules/auth/cmd/auth/config/: config.go
go_modules/auth/cmd/auth/connectors/: github_connector.go  tgbot_connector.go
go_modules/auth/cmd/auth/controller/: auth_controller.go  system_test_controller.go
go_modules/auth/cmd/auth/dao/: user_repository.go
go_modules/auth/cmd/auth/model/: user.go
go_modules/auth/cmd/auth/services/: auth_service.go
go_modules/auth/cmd/auth/utils/: path_param_utils.go
go_modules/auth/config/: application.yml
go_modules/tg-bot/: go.mod  go.sum
go_modules/tg-bot/cmd/tg-bot/: main.go
go_modules/tg-bot/cmd/tg-bot/bot/: bot_handler.go  bot_keyboards.go  bot_starter.go
go_modules/tg-bot/cmd/tg-bot/config/: config.go
go_modules/tg-bot/cmd/tg-bot/connectors/: auth_connector.go
go_modules/tg-bot/cmd/tg-bot/controller/: system_test_controller.go  telegram_bot_controller.go
go_modules/tg-bot/cmd/tg-bot/utils/: http_request_utils.go
go_modules/tg-bot/config/: application.yml
timetable/: CMakeLists.txt
timetable/cmd/timetable/: application.cpp
timetable/cmd/timetable/controllers/: system_controller.h  timetable_controller.h
timetable/cmd/timetable/libs/: json.hpp
(+5 files in other folders)
